<resources>
    <string name="app_name">Week Six</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">full name</string>
    <string name="phone_number">phone number</string>
    <string name="email">email</string>
    <string name="gender">gender</string>
    <string name="sign_in">Sign In</string>
</resources>